Fix cropped tablet header (#36)
* Fix cropped header issue

* Add headline breakpoint

* Set `hr` width to auto to avoid horizontal scrolling

--- a/source/stylesheets/components/content.scss
+++ b/source/stylesheets/components/content.scss
@@ -6,4 +6,10 @@
     color: #2A3039;
     margin: 2rem 0;
   }
+
+  @media only screen and (max-width: 1100px) {
+    h1 {
+      text-align: center;
+    }
+  }
 }
