--- a/source/stylesheets/components/header.scss
+++ b/source/stylesheets/components/header.scss
@@ -1,10 +1,4 @@
 header {
-  .header-nav {
-    height: 126px;
-    background-color: #00a15f;
-    border-bottom: #008951 1px solid;
-  }
-
   .container {
     position: relative;
     ul {
@@ -12,59 +6,78 @@ header {
       top: 50px;
       left: -2rem;
     }
-  }
-
-  ul, li {
-    margin: 0;
-    padding: 0;
-  }
-  li {
-    display: inline-block;
-    text-transform: uppercase;
-    a {
+    ul, li {
+      margin: 0;
+      padding: 0;
+    }
+    li {
       display: inline-block;
-      padding: 0.5rem 2rem;
-      color: white;
-      background: url(../assets/components/header/divider.png) repeat-y 100% 0;
-      &:hover {
-        color: #9fcf67;
+      text-transform: uppercase;
+      a {
+        display: inline-block;
+        padding: 0.5rem 2rem;
+        color: white;
+        background: url(../assets/components/header/divider.png) repeat-y 100% 0;
+        &:hover {
+          color: #9fcf67;
+        }
+      }
+      a.last {
+        background: none;
       }
     }
-    a.last {
-      background: none;
-    }
   }
-}
-
-.header__logo {
-  display: block;
-  float: right;
-  width: 115px;
-  height: 60px;
-  margin-top: 33px;
-  background: url(../assets/components/header/logo.png) no-repeat 0 0;
-  background-size: cover;
-  text-indent: -777em;
-}
-
-@media only screen and (max-width: 768px) {
   .header-nav {
-    ul li a {
-      padding: 0.5rem;
-      background: none;
-    }
+    height: 126px;
+    background-color: #00a15f;
+    border-bottom: #008951 1px solid;
   }
   .header__logo {
-    margin-top: 45px;
-    width: 77px;
-    height: 40px;
+    display: block;
+    float: right;
+    width: 115px;
+    height: 60px;
+    margin-top: 33px;
+    background: url(../assets/components/header/logo.png) no-repeat 0 0;
+    background-size: cover;
+    text-indent: -777em;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 1180px) {
+  header {
+    .container {
+      width: 90%;
+    }
+  }
+}
+
+@media only screen and (max-width: 820px) {
+  header {
+    .container {
+      width: 80%;
+    }
+    .header-nav {
+      ul li a {
+        padding: 0.5rem;
+        background: none;
+      }
+    }
+    .header__logo {
+      margin-top: 45px;
+      width: 77px;
+      height: 40px;
+    }
+  }
+}
+
+@media only screen and (max-width: 570px) {
   header {
     .container {
       padding-top: 1.5rem;
+      width: auto;
+    }
+    .header-nav {
       ul {
         position: static;
         text-align: center;
@@ -77,11 +90,11 @@ header {
         }
       }
     }
-  }
-  .header__logo {
-    float: none;
-    padding: 0;
-    margin: 0 auto;
-    margin-bottom: 1rem;
+    .header__logo {
+      float: none;
+      padding: 0;
+      margin: 0 auto;
+      margin-bottom: 1rem;
+    }
   }
 }
